--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/BaseTheme">
-        <activity android:name=".ui.SearchOrderActivity"></activity>
+        <activity android:name=".ui.OrderDetailActivity"></activity>
+        <activity android:name=".ui.SearchOrderActivity" />
         <activity android:name=".ui.MyOrderActivity" />
         <activity android:name=".ui.SplashActivity">
             <intent-filter>
