--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,9 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/BaseTheme">
-        <activity android:name=".ui.OrderDetailActivity"></activity>
+        <activity android:name=".ui.MyCarListActivity"></activity>
+        <activity android:name=".ui.AboutUsActivity" />
+        <activity android:name=".ui.OrderDetailActivity" />
         <activity android:name=".ui.SearchOrderActivity" />
         <activity android:name=".ui.MyOrderActivity" />
         <activity android:name=".ui.SplashActivity">
@@ -20,6 +22,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".ui.MainActivity" />
+        <activity android:name=".ui.H5Activity" />
     </application>
 
 </manifest>
