--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/BaseTheme">
-        <activity android:name=".ui.MyCarListActivity"></activity>
+        <activity android:name=".ui.OrderCenterActivity"></activity>
+        <activity android:name=".ui.MyCarListActivity" />
         <activity android:name=".ui.AboutUsActivity" />
         <activity android:name=".ui.OrderDetailActivity" />
         <activity android:name=".ui.SearchOrderActivity" />
