--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,6 +10,9 @@ android {
         versionCode rootProject.ext.versionCode
         versionName rootProject.ext.versionName
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
+
+        vectorDrawables.useSupportLibrary = true
         javaCompileOptions {
             annotationProcessorOptions {
                 arguments = [moduleName: project.getName()]
@@ -34,4 +37,6 @@ dependencies {
     implementation project(path: ':companylibrary')
     annotationProcessor 'com.alibaba:arouter-compiler:1.1.4'
     implementation 'com.contrarywind:Android-PickerView:4.1.9'
+    implementation "androidx.dynamicanimation:dynamicanimation:1.0.0"
+
 }
