--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/BaseTheme">
-        <activity android:name=".ui.BalancePendingActivity"></activity>
+        <activity android:name=".ui.FindCarActivity"></activity>
+        <activity android:name=".ui.BalancePendingActivity" />
         <activity android:name=".ui.BalanceActivity" />
         <activity android:name=".ui.BillSearchActivity" />
         <activity android:name=".ui.BillMonthActivity" />
