--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/BaseTheme">
-        <activity android:name=".ui.SearchCarActivity"></activity>
+        <activity android:name=".ui.OrderCreateActivity"></activity>
+        <activity android:name=".ui.SearchCarActivity" />
         <activity android:name=".ui.AssignOrderActivity" />
         <activity android:name=".ui.FindCarActivity" />
         <activity android:name=".ui.BalancePendingActivity" />
