--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,7 +11,7 @@ android {
         versionName rootProject.ext.versionName
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
-
+        multiDexEnabled true
         vectorDrawables.useSupportLibrary = true
         javaCompileOptions {
             annotationProcessorOptions {
@@ -23,6 +23,21 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+        }
+    }
+    //签名
+    signingConfigs {
+        debug {
+            storeFile file('../hongniu.jks')
+            storePassword 'hongniu'
+            keyAlias '泓牛供应链'
+            keyPassword 'hongniu'
+        }
+        release {
+            storeFile file('../hongniu.jks')
+            storePassword 'hongniu'
+            keyAlias '泓牛供应链'
+            keyPassword 'hongniu'
         }
     }
 }
@@ -38,5 +53,6 @@ dependencies {
     annotationProcessor 'com.alibaba:arouter-compiler:1.1.4'
     implementation 'com.contrarywind:Android-PickerView:4.1.9'
     implementation "androidx.dynamicanimation:dynamicanimation:1.0.0"
+    implementation project(path: ':ThirdLibrary')
 
 }
