--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/BaseTheme">
-        <activity android:name=".ui.OrderCreateActivity"></activity>
+        <activity android:name=".ui.MapSearchActivity"></activity>
+        <activity android:name=".ui.OrderCreateActivity" />
         <activity android:name=".ui.SearchCarActivity" />
         <activity android:name=".ui.AssignOrderActivity" />
         <activity android:name=".ui.FindCarActivity" />
@@ -34,6 +35,11 @@
         </activity>
         <activity android:name=".ui.MainActivity" />
         <activity android:name=".ui.H5Activity" />
+
+
+
+        <!--高德地图-->
+        <meta-data android:name="com.amap.api.v2.apikey" android:value="1457998aaed653947f53734c7bd5f47a"/>
     </application>
 
 </manifest>
