--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,8 +8,10 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
+        android:networkSecurityConfig="@xml/network_security_config"
         android:theme="@style/BaseTheme">
-        <activity android:name=".ui.MapSearchActivity"></activity>
+        <activity android:name=".ui.LoginActivity"></activity>
+        <activity android:name=".ui.MapSearchActivity" />
         <activity android:name=".ui.OrderCreateActivity" />
         <activity android:name=".ui.SearchCarActivity" />
         <activity android:name=".ui.AssignOrderActivity" />
@@ -34,12 +36,10 @@
             </intent-filter>
         </activity>
         <activity android:name=".ui.MainActivity" />
-        <activity android:name=".ui.H5Activity" />
-
-
-
-        <!--高德地图-->
-        <meta-data android:name="com.amap.api.v2.apikey" android:value="1457998aaed653947f53734c7bd5f47a"/>
+        <activity android:name=".ui.H5Activity" /> <!-- 高德地图 -->
+        <meta-data
+            android:name="com.amap.api.v2.apikey"
+            android:value="1457998aaed653947f53734c7bd5f47a" />
     </application>
 
 </manifest>
