--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,10 +7,12 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:supportsRtl="true"
         android:networkSecurityConfig="@xml/network_security_config"
+        android:supportsRtl="true"
         android:theme="@style/BaseTheme">
-        <activity android:name=".ui.LoginActivity"></activity>
+        <activity android:name=".ui.AttestationRoleActivityActivity"></activity>
+        <activity android:name=".ui.AttestationSelectRoleActivity" />
+        <activity android:name=".ui.LoginActivity" />
         <activity android:name=".ui.MapSearchActivity" />
         <activity android:name=".ui.OrderCreateActivity" />
         <activity android:name=".ui.SearchCarActivity" />
@@ -35,7 +37,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ui.MainActivity" />
+        <activity
+            android:name=".ui.MainActivity"
+            android:launchMode="singleTask" />
         <activity android:name=".ui.H5Activity" /> <!-- 高德地图 -->
         <meta-data
             android:name="com.amap.api.v2.apikey"
