--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,10 @@
 apply plugin: 'com.android.application'
+
+repositories {
+    flatDir {
+        dirs '/libs'
+    }
+}
 // 显示的时间格式，形如20171110
 static def releaseTime() {
     return new Date().format("MM-dd-HH-mm", TimeZone.getDefault());
@@ -21,6 +27,10 @@ android {
             annotationProcessorOptions {
                 arguments = [moduleName: project.getName()]
             }
+        }
+
+        ndk {
+            abiFilters "armeabi-v7a", "arm64-v8a"
         }
     }
     //签名
@@ -71,4 +81,10 @@ dependencies {
     implementation "androidx.dynamicanimation:dynamicanimation:1.0.0"
     implementation project(path: ':ThirdLibrary')
 
+    implementation (name:'FaceLivenessOpen-2.1.6.15', ext:'aar')
+    implementation (name:'NoCaptchaSDK-external-release-5.4.33', ext:'aar')
+    implementation (name:'oss-android-sdk-2.9.2', ext:'aar')
+    implementation (name:'rpsdk-3.1.0.1', ext:'aar')
+    implementation (name:'SecurityBodySDK-external-release-5.4.79', ext:'aar')
+    implementation (name:'SecurityGuardSDK-external-release-5.4.9901', ext:'aar')
 }
