--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,18 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.hongniu.freight">
 
     <application
         android:name=".App"
         android:allowBackup="true"
+        tools:replace="android:allowBackup"
+
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:networkSecurityConfig="@xml/network_security_config"
         android:supportsRtl="true"
         android:theme="@style/BaseTheme">
-        <activity android:name=".ui.AttestationRoleActivityActivity"></activity>
+        <activity android:name=".ui.AttestationFaceActivity"></activity>
+        <activity android:name=".ui.AttestationRoleActivityActivity" />
         <activity android:name=".ui.AttestationSelectRoleActivity" />
-        <activity android:name=".ui.LoginActivity" />
         <activity android:name=".ui.MapSearchActivity" />
         <activity android:name=".ui.OrderCreateActivity" />
         <activity android:name=".ui.SearchCarActivity" />
@@ -40,7 +43,15 @@
         <activity
             android:name=".ui.MainActivity"
             android:launchMode="singleTask" />
-        <activity android:name=".ui.H5Activity" /> <!-- 高德地图 -->
+        <activity android:name=".ui.H5Activity" />
+        <activity android:name=".ui.LoginActivity">
+            <intent-filter>
+                <action android:name="com.hongniu.freight.login" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+        <!-- 高德地图 -->
         <meta-data
             android:name="com.amap.api.v2.apikey"
             android:value="1457998aaed653947f53734c7bd5f47a" />
