--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,12 @@ android {
             abiFilters "armeabi-v7a", "arm64-v8a"
         }
     }
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+
     //签名
     signingConfigs {
         debug {
