--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,14 +6,14 @@
     <application
         android:name=".App"
         android:allowBackup="true"
-        tools:replace="android:allowBackup"
-
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:networkSecurityConfig="@xml/network_security_config"
         android:supportsRtl="true"
-        android:theme="@style/BaseTheme">
-        <activity android:name=".ui.AttestationFaceActivity"></activity>
+        android:theme="@style/BaseTheme"
+        tools:replace="android:allowBackup">
+        <activity android:name=".ui.FaceBackActivity"></activity>
+        <activity android:name=".ui.AttestationFaceActivity" />
         <activity android:name=".ui.AttestationRoleActivityActivity" />
         <activity android:name=".ui.AttestationSelectRoleActivity" />
         <activity android:name=".ui.MapSearchActivity" />
@@ -50,8 +50,7 @@
 
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
-        </activity>
-        <!-- 高德地图 -->
+        </activity> <!-- 高德地图 -->
         <meta-data
             android:name="com.amap.api.v2.apikey"
             android:value="1457998aaed653947f53734c7bd5f47a" />
