--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,11 @@
         android:supportsRtl="true"
         android:theme="@style/BaseTheme"
         tools:replace="android:allowBackup">
-        <activity android:name=".ui.CarAddModifyActivity"></activity>
+        <activity
+            android:name=".ui.PayActivity"
+            android:windowSoftInputMode="stateAlwaysHidden|adjustResize"/>
+        <activity android:name=".ui.CarAddModifyActivity" />
+        <activity android:name=".ui.WaitePayActivity" />
         <activity android:name=".ui.FaceBackActivity" />
         <activity android:name=".ui.AttestationFaceActivity" />
         <activity android:name=".ui.AttestationRoleActivityActivity" />
@@ -34,6 +38,7 @@
         <activity android:name=".ui.OrderDetailActivity" />
         <activity android:name=".ui.SearchOrderActivity" />
         <activity android:name=".ui.MyOrderActivity" />
+        <activity android:name=".ui.ForgetPassActivity" />
         <activity android:name=".ui.SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -51,7 +56,8 @@
 
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
-        </activity> <!-- 高德地图 -->
+        </activity>
+      <!-- 高德地图 -->
         <meta-data
             android:name="com.amap.api.v2.apikey"
             android:value="1457998aaed653947f53734c7bd5f47a" />
