导航和查看路线完成

--- a/ThirdLibrary/src/main/AndroidManifest.xml
+++ b/ThirdLibrary/src/main/AndroidManifest.xml
@@ -16,6 +16,10 @@
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.CAMERA"/>
 
-
+    <application>
+        <activity android:name="com.amap.api.navi.AmapRouteActivity"
+            android:theme="@android:style/Theme.NoTitleBar"
+            android:configChanges="orientation|keyboardHidden|screenSize" />
+    </application>
 
 </manifest>
