--- a/ThirdLibrary/build.gradle
+++ b/ThirdLibrary/build.gradle
@@ -60,4 +60,12 @@ dependencies {
 
     //https://github.com/LuckSiege/PictureSelector 图片选择器
     api 'com.github.LuckSiege.PictureSelector:picture_library:v2.4.6'
+
+    //融云聊天
+    api 'cn.rongcloud.sdk:sight:2.9.17'
+    api 'cn.rongcloud.sdk:rcsticker:2.9.17'
+    // rcsticker 必须依赖 im_kit
+    api 'cn.rongcloud.sdk:im_kit:2.9.18'
+    // im_kit 必须依赖 im_lib ，所以需要加入对应依赖
+    api 'cn.rongcloud.sdk:im_lib:2.9.18'
 }
