--- a/build.gradle
+++ b/build.gradle
@@ -35,6 +35,7 @@ allprojects {
         google()
         jcenter()
         maven { url 'https://jitpack.io' }
+        maven {url  "https://dl.bintray.com/rongcloud/maven"}
     }
 }
 
