--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:supportsRtl="true"
         android:theme="@style/BaseTheme"
         tools:replace="android:allowBackup,android:theme">
-        <activity android:name=".ui.AppraiseActivity"></activity>
+        <activity android:name=".ui.AppraiseActivity"/>
         <activity android:name=".ui.PayResultActivity" />
         <activity android:name=".ui.OrderFindCarActivity" />
         <activity
@@ -64,10 +64,43 @@
         </activity>
         <activity android:name=".ui.InsureanceInfodActivity" />
         <activity android:name=".ui.BindBlankCardActivity" />
-        <activity android:name=".ui.PDFActivity" /> <!-- 高德地图 -->
+        <!--聊天-->
+        <activity
+            android:name=".ui.ChatConversationActivity"
+            android:windowSoftInputMode="stateHidden|adjustResize"
+            tools:ignore="DuplicateActivity">
+
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+
+                <data
+                    android:host="com.hongniu.freight"
+                    android:pathPrefix="/conversation/"
+                    android:scheme="rong" />
+            </intent-filter>
+        </activity>
+
+        <!-- 高德地图 -->
         <meta-data
             android:name="com.amap.api.v2.apikey"
             android:value="1457998aaed653947f53734c7bd5f47a" />
+
+        <provider
+            android:name="androidx.core.content.FileProvider"
+            android:authorities="${applicationId}.FileProvider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/rc_file_path" />
+        </provider>
+
+        <meta-data
+            android:name="RONG_CLOUD_APP_KEY"
+            tools:replace="android:value"
+            android:value="e0x9wycfe4enq" />
     </application>
 
 </manifest>
