--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -81,7 +81,10 @@
             </intent-filter>
         </activity>
         <activity android:name=".ui.WayBillActivity" />
-        <activity android:name=".ui.QRCodeActivity" /> <!-- 高德地图 -->
+        <activity android:name=".ui.QRCodeActivity" />
+
+        <receiver android:name=".receiver.MyPushReceiver"/>
+        <!-- 高德地图 -->
         <meta-data
             android:name="com.amap.api.v2.apikey"
             android:value="1457998aaed653947f53734c7bd5f47a" />
