--- a/build.gradle
+++ b/build.gradle
@@ -36,6 +36,7 @@ allprojects {
         jcenter()
         maven { url 'https://jitpack.io' }
         maven {url  "https://dl.bintray.com/rongcloud/maven"}
+        maven { url 'https://dl.bintray.com/umsdk/release' }
     }
 }
 
