--- a/companylibrary/build.gradle
+++ b/companylibrary/build.gradle
@@ -38,8 +38,7 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     api project(path: ':BaseLibrary')
-
-
+    implementation project(path: ':ThirdLibrary')
 
 
 }
