--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -102,8 +102,12 @@
 
         <meta-data
             android:name="RONG_CLOUD_APP_KEY"
-            android:value="e0x9wycfe4enq"
+            android:value="${RONG_CLOUD_APP_KEY}"
             tools:replace="android:value" />
+       <!-- <meta-data
+            android:name="RONG_CLOUD_APP_KEY"
+            android:value="e0x9wycfe4enq"
+            tools:replace="android:value" />-->
     </application>
 
 </manifest>
