上传回单和查看回单完成

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -83,6 +83,7 @@
         </activity>
         <activity android:name=".ui.WayBillActivity" />
         <activity android:name=".ui.QRCodeActivity" />
+        <activity android:name=".ui.OrderUpReceiptActivity" />
 
         <receiver android:name=".receiver.MyPushReceiver"/>
         <!-- 高德地图 -->
