--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -58,7 +58,7 @@
         <activity android:name=".ui.H5Activity" />
         <activity android:name=".ui.LoginActivity">
             <intent-filter>
-                <action android:name="com.hongniu.freight.login" />
+                <action android:name="${applicationId}.login" />
 
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
