--- a/app/build.gradle
+++ b/app/build.gradle
@@ -88,6 +88,8 @@ android {
             applicationId "com.hongniu.zhijia"//智佳泓牛
             resValue "string", "app_name", "智佳泓牛"
             resValue "string", "weChatAppid", "wx10d4b234bc2e64dc"//微信APPID
+            resValue "string", "UMAppKey", "5ef5abb1167edd3c00000036"//友盟推送 appkey
+            resValue "string", "UMpushSercet", "dae81df871199ace057714f1cdce6f1d"//友盟推送sercet
             manifestPlaceholders = [
                     RONG_CLOUD_APP_KEY: "tdrvipkstno85"//融云聊天key
                    , GAODE_MAP: "f78422a8e2f09b6e9fff92336b74f185"//高德地图
