--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,9 +1,12 @@
 apply plugin: 'com.android.application'
+apply plugin: 'kotlin-android'
 
 repositories {
     flatDir {
         dirs '/libs'
     }
+    maven { url 'https://dl.bintray.com/kotlin/kotlin-eap' }
+    mavenCentral()
 }
 // 显示的时间格式，形如20171110
 static def releaseTime() {
@@ -136,7 +139,8 @@ dependencies {
     api 'com.hedgehog.ratingbar:app:1.1.2'
     //二维码扫描
     api 'cn.yipianfengye.android:zxing-library:2.2'
+    implementation "androidx.core:core-ktx:+"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
 
-    
 }
