--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,7 +37,9 @@ android {
             abiFilters "armeabi-v7a", "arm64-v8a"
         }
     }
-
+    viewBinding{
+        enabled = true
+    }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
