--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.hongniu.freight">
+    package="com.hongniu.freight" >
 
     <application
         android:name=".App"
@@ -10,8 +10,10 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/BaseTheme"
-        tools:replace="android:allowBackup,android:theme">
-        <activity android:name=".ui.SetPasswordActivity"></activity>
+        tools:replace="android:allowBackup,android:theme" >
+        <activity android:name=".ui.AppAddressListActivity" >
+        </activity>
+        <activity android:name=".ui.SetPasswordActivity" />
         <activity android:name=".ui.OrderSelectOwnerActivity" />
         <activity android:name=".ui.OrderSelectDriverActivity" />
         <activity android:name=".ui.OrderReceiveActivity" />
@@ -47,7 +49,7 @@
         <activity android:name=".ui.SearchOrderActivity" />
         <activity android:name=".ui.MyOrderActivity" />
         <activity android:name=".ui.ForgetPassActivity" />
-        <activity android:name=".ui.SplashActivity">
+        <activity android:name=".ui.SplashActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -58,7 +60,7 @@
             android:name=".ui.MainActivity"
             android:launchMode="singleTask" />
         <activity android:name=".ui.H5Activity" />
-        <activity android:name=".ui.LoginActivity">
+        <activity android:name=".ui.LoginActivity" >
             <intent-filter>
                 <action android:name="${applicationId}.login" />
 
@@ -70,7 +72,7 @@
         <activity
             android:name=".ui.ChatConversationActivity"
             android:windowSoftInputMode="stateHidden|adjustResize"
-            tools:ignore="DuplicateActivity">
+            tools:ignore="DuplicateActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
 
@@ -98,7 +100,7 @@
             android:name="androidx.core.content.FileProvider"
             android:authorities="${applicationId}.FileProvider"
             android:exported="false"
-            android:grantUriPermissions="true">
+            android:grantUriPermissions="true" >
             <meta-data
                 android:name="android.support.FILE_PROVIDER_PATHS"
                 android:resource="@xml/rc_file_path" />
