--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,8 +9,10 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
+        android:networkSecurityConfig="@xml/network_security_config"
         android:theme="@style/BaseTheme"
-        tools:replace="android:allowBackup,android:theme" >
+        tools:replace="android:allowBackup,android:theme,android:networkSecurityConfig"
+        >
         <activity android:name=".ui.AppAddressListActivity"
             android:windowSoftInputMode="stateVisible|adjustResize">
         </activity>
